# scib

./: .codecov.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-manifest.json  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  Snakefile  benchmarking.py  config.yaml  environment.yaml  install.md  pyproject.toml  pytest.ini  requirements.txt  requirements_extra.txt  setup.cfg  setup.py  utils.py
.github/: release-please-config.json
.github/workflows/: build.yml  deployment.yml  pre-commit.yml  python-package-conda.yml  python-package.yml  test.yml
LISI/: .gitignore  DESCRIPTION  NAMESPACE  README.md
LISI/R/: RcppExports.R  data.R  utils.R
LISI/man/: X.Rd  compute_lisi.Rd  lisi-package.Rd  meta_data.Rd
LISI/src/: Makevars  RcppExports.cpp  utils.cpp
LISI/tests/: testthat.R
LISI/tests/testthat/: test_lisi.R
R/: cc_variance.ipynb  integration.R  runConos.R  runMethods.R  runSeurat.R
R/visualization/: README.md  atlas_heatmap.ipynb  exampleKeys.R  getKeys.R  getMethodsPal.R  knit_table.R  metrics_ATAC_141020.csv  metrics_ATAC_211020.csv  metrics_RNA_211020_full.csv  plotBestMethodsATAC.R  plotBestMethodsAcrossAtlases.R  plotBestMethodsRNA.R  plotBestScatter.R  plotSingleATAC_withFeat.R  plotSingleAtlas.R  plotSingleAtlasATAC.R  plotSingleTaskATAC.R  plotSingleTaskRNA.R  plotSummaryScatter.R  scalability_score_memory_revision.csv  scalability_score_time_revision.csv  usability4bestMethods.csv  vis_tab_IB.Rmd  vis_tab_IB.rmd
R/visualization/data/: metrics_RNA_allTasks.csv  metrics_RNA_immune_human.csv  scalability_score_memory.csv  scalability_score_time.csv  usability4bestMethods.csv
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  modules.rst  readme.rst  scib.metrics.rst  scib.rst  scib_integration.rst  scib_metrics.rst  scib_preprocessing.rst  user_guide.rst
docs/source/api/: scib.integration.bbknn.rst  scib.integration.combat.rst  scib.integration.desc.rst  scib.integration.mnn.rst  scib.integration.runBBKNN.rst  scib.integration.runCombat.rst  scib.integration.runDESC.rst  scib.integration.runMNN.rst  scib.integration.runSaucie.rst  scib.integration.runScGen.rst  scib.integration.runScanorama.rst  scib.integration.runScanvi.rst  scib.integration.runScvi.rst  (+31 more)
envs/: conosTest.yml  conversion.yml  env_vars_activate.sh  env_vars_deactivate.sh  sc-tutorial.yml  scIB-R-conversion.yml  scIB-R-integration.yml  scIB-python.yml  set_vars.sh
integration_methods/: functions.py
notebooks/: Issues.ipynb  NMI.ipynb  metrics.ipynb  normalisation.ipynb  scIB-runIntegration.ipynb  scIB.ipynb  silhouette_graph.ipynb
notebooks/analysis/: ATAC_feature_analysis.ipynb  Metrics_correlation_and_range_analysis.ipynb  RNA_integration_task_analysis.ipynb  Robustness_of_score_aggregation.ipynb
notebooks/clustering/: Tests.ipynb  optimized_clustering.ipynb
notebooks/data_preprocessing/: atlases_add_annotation.ipynb  batch_correction.ipynb  mouse_atlases.ipynb  normalisation.ipynb
notebooks/integration/: Test_desc.ipynb  Test_scgen.ipynb  Tests.ipynb  conos.ipynb  saucie.ipynb  scGen.ipynb  scanvi.ipynb  seurat.ipynb
notebooks/metrics/: NMI.ipynb  PCRhvg.ipynb  Tests.ipynb  cell_cycle_effect.ipynb  comparison.ipynb  isolated_label.ipynb  kBET.ipynb  metrics.ipynb  summary_metrics.ipynb  trajectory_score.ipynb
scIB/: __init__.py  clustering.py  integration.py  metrics.py  metrics_mic.py  preprocessing.py  trajectory_inference.py  utils.py
scIB/knn_graph/: README.md  knn_graph.cpp  knn_oldstyle.cpp
scIB/lisi_py/: README.md  compute_simpson_index_graph_cy.c  compute_simpson_index_graph_cy.pyx  simpson_index_py.pyx
scIB/metrics/: __init__.py  ari.py  cell_cycle.py  graph_connectivity.py  highly_variable_genes.py  isolated_labels.py  kbet.py  lisi.py  metrics.py  nmi.py  pcr.py  silhouette.py  trajectory.py
scIB/resources/: g2m_genes_tirosh.txt  s_genes_tirosh.txt
scIB/tests/: cProfiler_test.py  test_clustering.py  test_func_profiler.R  test_metrics.py  test_preprocessing.py  utils.py
scib/: __init__.py  _package_tools.py  _tools.py  exceptions.py  integration.py  plotting.py  preprocessing.py  trajectory_inference.py  utils.py
scib/knn_graph/: README.md  knn_graph.cpp
scib/metrics/: __init__.py  ari.py  cell_cycle.py  clustering.py  graph_connectivity.py  highly_variable_genes.py  isolated_labels.py  kbet.py  lisi.py  metrics.py  morans_i.py  nmi.py  pcr.py  silhouette.py  trajectory.py  utils.py
scib/resources/: cell_cycle_genes_caenorhabditis_elegans.tsv  cell_cycle_genes_danio_rerio.tsv  cell_cycle_genes_homo_sapiens.tsv  cell_cycle_genes_mus_musculus.tsv  convert_genes.py  g2m_genes_tirosh.txt  g2m_genes_tirosh_hm.txt  s_genes_tirosh.txt  s_genes_tirosh_hm.txt
scripts/: Snakefile  all_metrics.py  cell_cycle_variance.py  combine_metrics.py  config.yaml  integration_fail_file.py  makefile  merge.py  merge_benchmarks.py  merge_cc_variance.py  merge_metrics.py  metrics.py  normalisation.py  precompute_conn.py  preprocessing.py  runIntegration.py  runMethods.R  runPP.py  runPost.py  run_bbknn.py  run_integration.sh  run_lisi_graph.py  run_normalize.sh  run_scanorama.py  run_seurat.py  runqueue.sh  save_cat.py  save_embeddings.py  scale_halfopen.py  scale_lisi.py  sim_norm.py  snakemake_parse.py  test_metrics.py  update_timestamp.py
scripts/R/: runMethods.R  runSeurat.R
tests/: common.py  conftest.py  requirements.txt  test_pipeline.py
tests/api/: test_clustering.py  test_metrics.py
tests/integration/: test_harmony.py  test_scanorama.py  test_scanvi.py  test_scvi-tools.py  test_scvi.py  test_trvae.py
tests/metrics/: test_all.py  test_beyond_label_metrics.py  test_clisi.py  test_cluster_metrics.py  test_graph_connectivity.py  test_ilisi.py  test_isolated_label.py  test_kbet.py  test_lisi.py  test_morans_i.py  test_pcr_metrics.py  test_silhouette_metrics.py  test_trajectory.py
tests/pipeline/: test_metrics.py  test_pipeline.py
tests/plots/: test_plots.py
tests/preprocessing/: test_clustering.py  test_gene_scoring.py  test_preprocessing.py  test_qc.py
(+72 files in other folders)
