[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = 'True'
log_cli_level = 'INFO'
addopts = '-p no:warnings'
durations = 0

[tool.isort]
include_trailing_comma = true
profile = "black"
line_length = 88
known_third_party = ["pytest"]
skip_glob = "docs/*"

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
exclude = ".eggs|.git|.venv|build|dist"
