[project]
name = "scib"
dynamic = ["version"]
requires-python = ">=3.9"

[project.optional-dependencies]
rpy2 = ["rpy2>=3,<3.5", "anndata2ri<2"]
test = ["pytest", "pytest-icdiff", "pytest-cov", "pytest-benchmark", "codecov"]
dev = ["build", "twine", "isort", "bump2version", "pre-commit"]
docs = ["sphinx", "sphinx_rtd_theme", "myst_parser", "sphinx-automodapi"]
louvain = ["igraph", "louvain>=0.8"]
bbknn = ["bbknn==1.3.9"]
scanorama = ["scanorama>=1.7.4"]
mnn = ["mnnpy==0.1.9.5"]
scgen = ["scgen>=2.1.0"]
scvi = ["scvi-tools>=0.16"]
trvae = ["trvae==1.1.2"]
trvaep = ["trvaep==0.1.0"]
desc = ["desc==2.0.3"]
harmony = ["harmony-pytorch"]

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "-p no:warnings"
durations = 0

[tool.isort]
include_trailing_comma = true
profile = "black"
line_length = 88
known_third_party = ["pytest"]
skip_glob = "docs/*"

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
exclude = ".eggs|.git|.venv|build|dist"
