[bumpversion]
current_version = 1.0.2
commit = True
tag = True

[bumpversion:file:VERSION.txt]
search = {current_version}
replace = {new_version}

[metadata]
name = scib
version = file: VERSION.txt
description = Evaluating single-cell data integration methods
long_description = file: README.md
long_description_content_type = text/markdown
author = Malte D. Luecken, Maren Buettner, Daniel C. Strobl, Michaela F. Mueller
author_email = malte.luecken@helmholtz-muenchen.de, michaela.mueller@helmholtz-muenchen.de
license = MIT
url = https://github.com/theislab/scib
project_urls =
	Pipeline = https://github.com/theislab/scib-pipeline
	Reproducibility = https://theislab.github.io/scib-reproducibility
	Bug Tracker = https://github.com/theislab/scib/issues
keywords =
	benchmarking
	single cell
	data integration
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Software Development :: Build Tools
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[bdist_wheel]
build_number = 1

[options]
packages =
	scib
	scib.metrics
python_requires = >=3.7
install_requires =
	numpy
	pandas
	seaborn
	matplotlib
	numba
	scanpy>=1.5
	anndata>=0.7.2
	h5py
	rpy2>=3,<=3.4.2
	anndata2ri
	scipy
	scikit-learn
	scikit-misc
	louvain
	umap-learn
	pydot
	python-igraph
	llvmlite
	deprecated
zip_safe = False

[options.package_data]
scib =
	resources/*.txt
	knn_graph/*

[options.extras_require]
test = pytest; pytest-icdiff; pytest-cov; codecov
dev = build; twine; isort; bump2version; pre-commit
docs = sphinx; sphinx_rtd_theme; myst_parser; sphinx-automodapi
bbknn = bbknn ==1.3.9
scanorama = scanorama ==1.7.0
mnn = mnnpy ==0.1.9.5
scgen = scgen  >=2.1.0
scvi = scvi-tools  >=0.16.1
trvae = trvae  ==1.1.2
trvaep = trvaep  ==0.1.0
desc = desc  ==2.0.3

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = black
skip_glob = docs/*

[tool.black]
line-length = 120
target-version = py38
include = \.pyi?$
exclude =
  .eggs
  .git
  .venv
  build
  dist

[flake8]
max-line-length = 88
ignore =
    # line break before a binary operator -> black does not adhere to PEP8
    W503
    # line break occurred after a binary operator -> black does not adhere to PEP8
    W504
    # line too long -> we accept long comment lines; black gets rid of long code lines
    E501
    # whitespace before : -> black does not adhere to PEP8
    E203
    # missing whitespace after ,', ';', or ':' -> black does not adhere to PEP8
    E231
    # continuation line over-indented for hanging indent -> black does not adhere to PEP8
    E126
    # E266 too many leading '#' for block comment -> this is fine for indicating sections
    E262
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    E731
    # allow I, O, l as variable names -> I is the identity matrix, i, j, k, l is reasonable indexing notation
    E741
    # Missing docstring in public package
    D104
    # ... imported but unused
    F401
    # Missing docstring in public module
    D100
    # Missing docstring in __init__
    D107
    # Do not perform function calls in argument defaults.
    B008
    # line break before binary operator
    W503
    # Missing docstring in magic method
    D105
    # whitespace before ':'
    E203
    # format string does contain non-indexed parameters
    P101
    # Unknown interpreted text role "func"
    RST304
    # Unnecessary dict call - rewrite as a literal
    C408
exclude = .git,__pycache__,build,docs/_build,dist
per-file-ignores =
    scib/*: D
    tests/*: D
    */__init__.py: F401
