[bumpversion]
current_version = 1.1.6
commit = True
tag = True

[bumpversion:file:VERSION.txt]
search = {current_version}
replace = {new_version}

[metadata]
name = scib
version = file: VERSION.txt
description = Evaluating single-cell data integration methods
long_description = file: README.md
long_description_content_type = text/markdown
author = Malte D. Luecken, Maren Buettner, Daniel C. Strobl, Michaela F. Mueller
author_email = malte.luecken@helmholtz-muenchen.de, michaela.mueller@helmholtz-muenchen.de
license = MIT
url = https://github.com/theislab/scib
project_urls =
	Pipeline = https://github.com/theislab/scib-pipeline
	Reproducibility = https://theislab.github.io/scib-reproducibility
	Bug Tracker = https://github.com/theislab/scib/issues
keywords =
	benchmarking
	single cell
	data integration
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Software Development :: Build Tools
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[bdist_wheel]
build_number = 1

[options]
packages =
	scib
	scib.metrics
python_requires = >=3.9
install_requires =
	numpy
	pandas>=2
	seaborn
	matplotlib
	numba
	scanpy>=1.5
	anndata>=0.7.2
	h5py
	scipy
	scikit-learn
	scikit-misc
	leidenalg
	umap-learn
	pydot
	igraph>=0.10
	llvmlite
	deprecated
zip_safe = False

[options.package_data]
scib =
	resources/*.txt
	knn_graph/*

[options.extras_require]
rpy2 = rpy2>=3; anndata2ri
test = pytest; pytest-icdiff; pytest-cov; codecov
dev = build; twine; isort; bump2version; pre-commit
docs = sphinx; sphinx_rtd_theme; myst_parser; sphinx-automodapi
louvain = igraph; louvain>=0.8
bbknn = bbknn ==1.3.9
scanorama = scanorama >=1.7.4
mnn = mnnpy ==0.1.9.5
scgen = scgen  >=2.1.0
scvi = scvi-tools  >=0.16
trvae = trvae  ==1.1.2
trvaep = trvaep  ==0.1.0
desc = desc  ==2.0.3
harmony = harmony-pytorch

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = black
skip_glob = docs/*

[tool.black]
line-length = 120
target-version = py311
include = \.pyi?$
exclude =
	.eggs
	.git
	.venv
	build
	dist

[flake8]
max-line-length = 88
ignore =
	W503
	W504
	E501
	E203
	E231
	E126
	E262
	E731
	E741
	D104
	F401
	D100
	D107
	B008
	W503
	D105
	E203
	P101
	RST304
	C408
exclude = .git,__pycache__,build,docs/_build,dist
per-file-ignores =
	scib/*: D
	tests/*: D
	*/__init__.py: F401
