[bumpversion]
current_version = 1.1.7
commit = True
tag = True

[bumpversion:file:VERSION.txt]
search = {current_version}
replace = {new_version}

[metadata]
name = scib
version = file: VERSION.txt
description = Evaluating single-cell data integration methods
long_description = file: README.md
long_description_content_type = text/markdown
author = Malte D. Luecken, Maren Buettner, Daniel C. Strobl, Michaela F. Mueller
author_email = malte.luecken@helmholtz-muenchen.de, michaela.mueller@helmholtz-muenchen.de
license = MIT
url = https://github.com/theislab/scib
project_urls =
	Pipeline = https://github.com/theislab/scib-pipeline
	Reproducibility = https://theislab.github.io/scib-reproducibility
	Bug Tracker = https://github.com/theislab/scib/issues
keywords =
	benchmarking
	single cell
	data integration
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Software Development :: Build Tools
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[bdist_wheel]
build_number = 1

[options]
packages =
	scib
	scib.metrics
python_requires = >=3.9
install_requires =
	numpy
	pandas>=2
	seaborn
	matplotlib
	numba
	scanpy>=1.5
	anndata>=0.7.2
	h5py
	scipy
	scikit-learn
	scikit-misc
	leidenalg
	umap-learn
	pydot
	igraph>=0.10
	llvmlite
	deprecated
	zarr
zip_safe = False

[options.package_data]
scib =
	resources/*
	knn_graph/*

[flake8]
max-line-length = 100
ignore =
	W503
	W504
	E501
	E203
	E231
	E126
	E262
	E731
	E741
	D104
	F401
	D100
	D107
	B008
	W503
	D105
	E203
	P101
	RST304
	C408
exclude = .git,__pycache__,build,docs/_build,dist
per-file-ignores =
	scib/*: D
	tests/*: D
	*/__init__.py: F401
